src/test/deca/syntax/invalid/Entier_depasse_32bits.deca
// Description:
//    test d'un entier qui dépasse limite de codage
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
    int a = 2147483650;             //2147483648 == 2^31 qui est le nombre max autorisé
}
